Adding first draft of framework model 3.

--- a/website/_quarto.yml
+++ b/website/_quarto.yml
@@ -17,8 +17,10 @@ website:
     background-color: "#454545"
     title: false
     left:
+      - href: ../
+        text: Paulogcd
       - href: index.qmd
-        text: Home
+        text: Master Thesis
       - models.qmd
       - about.qmd
 
