--- a/Project.toml
+++ b/Project.toml
@@ -5,9 +5,11 @@ Integrals = "de52edbc-65ea-441a-8357-d3a637375a31"
 Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
 LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
 NamedArrays = "86f7a689-2022-50b4-a561-43c23ac3c673"
+PlotlyBase = "a03496cd-edff-5a9b-9e67-9cda94a718b5"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Pluto = "c3e4b0f8-55cb-11ea-2926-15256bba5781"
 PlutoSliderServer = "2fc8631c-6f24-4c5b-bca7-cbb509c42db4"
 PlutoUI = "7f904dfe-b85e-4ff6-b463-dae2292396a8"
+ReadStatTables = "52522f7a-9570-4e34-8ac6-c005c74d4b84"
 Roots = "f2b01f46-fcfa-551c-844a-d8ac1e96c665"
 XLSX = "fdbf4ff8-1666-58a4-91e7-1b58723a45e0"
