--- a/Project.toml
+++ b/Project.toml
@@ -2,6 +2,7 @@
 DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 Econometrics = "4d6a76a9-bfbc-5492-8924-cf6ed7875f06"
+FixedWidthTables = "ef6c9296-b25d-482c-a0a7-898918678e13"
 GLM = "38e38edf-8417-5370-95a0-9cbb8c7f171a"
 Integrals = "de52edbc-65ea-441a-8357-d3a637375a31"
 Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
