Stacked barplot and TNR in plot.

--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 Econometrics = "4d6a76a9-bfbc-5492-8924-cf6ed7875f06"
 FixedWidthTables = "ef6c9296-b25d-482c-a0a7-898918678e13"
+Formatting = "59287772-0a20-5a39-b81b-1366585eb4c0"
 GLM = "38e38edf-8417-5370-95a0-9cbb8c7f171a"
 Integrals = "de52edbc-65ea-441a-8357-d3a637375a31"
 Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
@@ -23,4 +24,5 @@ RDatasets = "ce6b1742-4840-55fa-b093-852dadbb1d8b"
 ReadStatTables = "52522f7a-9570-4e34-8ac6-c005c74d4b84"
 Roots = "f2b01f46-fcfa-551c-844a-d8ac1e96c665"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
+StatsPlots = "f3b207a7-027a-5e70-b257-86293d7955fd"
 XLSX = "fdbf4ff8-1666-58a4-91e7-1b58723a45e0"
