New IV approach formalized. Regressions are run. I still have to write the results.

--- a/Project.toml
+++ b/Project.toml
@@ -6,6 +6,7 @@ Econometrics = "4d6a76a9-bfbc-5492-8924-cf6ed7875f06"
 FixedWidthTables = "ef6c9296-b25d-482c-a0a7-898918678e13"
 Formatting = "59287772-0a20-5a39-b81b-1366585eb4c0"
 GLM = "38e38edf-8417-5370-95a0-9cbb8c7f171a"
+HypothesisTests = "09f84164-cd44-5f33-b23f-e6b0d136a0d5"
 Integrals = "de52edbc-65ea-441a-8357-d3a637375a31"
 Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
 LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
