Advancing on the DRAFT.

--- a/Project.toml
+++ b/Project.toml
@@ -23,6 +23,7 @@ PlutoSliderServer = "2fc8631c-6f24-4c5b-bca7-cbb509c42db4"
 PlutoUI = "7f904dfe-b85e-4ff6-b463-dae2292396a8"
 RDatasets = "ce6b1742-4840-55fa-b093-852dadbb1d8b"
 ReadStatTables = "52522f7a-9570-4e34-8ac6-c005c74d4b84"
+RegressionTables = "d519eb52-b820-54da-95a6-98e1306fdade"
 Roots = "f2b01f46-fcfa-551c-844a-d8ac1e96c665"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 StatsPlots = "f3b207a7-027a-5e70-b257-86293d7955fd"
